<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Flam</string>
    <string name="facebook_application_id" translatable="false">1063568384411530</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1063568384411530</string>

    <string name="twitter_consumer_key" translatable="false">pl4hz1nERf5mRwO72GNqEYuOc</string>
    <string name="twitter_consumer_secret" translatable="false">sQeo75eukVhqDxgqm9TuYqnGkClritsAayhJ3hqVyq3c4JNhGp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="apikeyyoutube" translatable="false"> AIzaSyCh3p_c0SLUzSwC0GjQrgJN1APPiZ4no-c</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>


</resources>